compiler/tests/success/x86-64/pext.jazz
export
fn test_pext32(reg u64 tmp)
{
  reg u32 a b c;

  a = 0xFF;
  b = 0x02;
  c = #PEXT_32(a, b);
  (u32)[tmp] = c;
}

export
fn test_pext64(reg u64 tmp)
{
  reg u64 a b c;

  a = 0xFF;
  b = 0x02;
  c = #PEXT_64(a, b);
  (u64)[tmp] = c;
}
