compiler/tests/fail/arm-m4/tst_imm_too_large.jazz
export
fn main(reg u32 x) {
    reg bool n, z, c, v;
    n, z, c, v = #TST(x, 0x0000caca);
    [x] = x if z;
}
